load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

buildifier(
    name = "buildifier",
    buildifier = "@buildifier//:buildifier",
)

buildifier_test(
    name = "buildifier_test",
    size = "small",
    srcs = glob([
        "**/*.bzl",
        "**/*.bazel",
        "WORKSPACE",
        "WORKSPACE.bzlmod",
    ]),
    buildifier = "@buildifier//:buildifier",
    tags = [
        "dont_test_on_windows",
        "manual",
    ],
    verbose = True,
)

sh_test(
    name = "nix_smoke_test",
    size = "medium",
    srcs = ["nix_test.sh"],
    tags = ["external"],
)
