load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

# Run this to check for errors in BUILD files.
buildifier(
    name = "buildifier",
    mode = "check",
)

# Run this to fix the errors in BUILD files.
buildifier(
    name = "buildifier-fix",
    mode = "fix",
    verbose = True,
)

buildifier_test(
    name = "buildifier_test",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//tests:all_files",
    ],
    mode = "diff",
    tags = ["dont_test_on_windows"],
)
